<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Mudassir Khan\'s Android Portfolio</string>
    <string name="main_activity_toolbar_name" translatable="false">Mudassir Khan</string>
    <string name="main_activity_toolbar_description">Android Developer</string>
    <string name="main_activity_collapsed_toolbar_title" translatable="false">MK\'s Android Portfolio</string>
    <string name="navigation_drawer_name" translatable="false">Mudassir Khan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_websites_title">Check my Web Pages</string>
    <string name="navigation_drawer_websites_my_site">My Website</string>
    <string name="navigation_drawer_websites_linkedin">Linkedin / CV</string>
    <string name="navigation_drawer_websites_github" translatable="false">Github</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_my_website_url" translatable="false">https://github.com/mookyjan</string>
    <string name="navigation_drawer_linkedin_scheme" translatable="false">linkedin://</string>
    <string name="navigation_drawer_linkedin_url" translatable="false">https://www.linkedin.com/in/</string>
    <string name="navigation_drawer_linkedin_id" translatable="false">mudassir-khan-a8a3997b</string>
    <string name="navigation_drawer_github_url" translatable="false">https://github.com/mookyjan</string>
    <string name="floating_action_phone_label">Phone</string>
    <string name="floating_action_sms_label">SMS</string>
    <string name="floating_action_email_label">Email</string>
    <string name="floating_action_menu_label">Contact me</string>
    <string name="portfolio_item_networking_title">Networking</string>
    <string name="portfolio_item_networking_description">Native HTTP connection, Volley, Okhttp, Retrofit</string>
    <string name="portfolio_item_recyclerviews_title">RecyclerViews</string>
    <string name="portfolio_item_recyclerviews_description">Vertical RecyclerView, Card Views, Grid RecyclerView, Horizontal RecyclerViews</string>
    <string name="portfolio_item_data_persistence_title">Data persistence</string>
    <string name="portfolio_item_data_persistence_description">Native SQLite, Content Providers, Realm, Shared Preferences, Files</string>
    <string name="portfolio_item_json_parsing_title">Json Parsing</string>
    <string name="portfolio_item_json_parsing_description">Native JSON parsing, GSON</string>
    <string name="portfolio_item_third_party_libraries_title">Third Party Libraries</string>
    <string name="portfolio_item_third_party_libraries_description">Picasso, Volley, Okhttp, Retrofit, GSON, Realm</string>
    <string name="portfolio_item_system_integration_title">System Integration</string>
    <string name="portfolio_item_system_integration_description">Notifications, Job scheduling, Broadcast Receivers, Widgets</string>
    <string name="portfolio_item_preferences_title">Settings</string>
    <string name="portfolio_item_preferences_description">Preferences, Shared Preferences, Listeners</string>
    <string name="intents_my_phone_number" translatable="false">+923122015297</string>
    <string name="intents_my_email_address" translatable="false">mudassir45khan@yahoo.com</string>
    <string name="intents_message_content">Hi Mudassir!\nHow are you doing?\nI think you\'ve got great skills in Android Development.\nWhy don\'t we get in touch?</string>
    <string name="intents_message_subject">I loved your Portfolio App!</string>
    <string name="intents_share_title">Choose an App to share with</string>
    <string name="intents_share_content">Hi there!\nLet me share with you this great Android App I just found:\n<xliff:g>%1$s</xliff:g></string>
    <string name="intents_share_content_playstore_url" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="intents_share">Share</string>
    <string name="main_from_detail_activity_title_tag" translatable="false">title</string>
    <string name="main_from_detail_activity_icon_tag" translatable="false">icon</string>
    <string name="main_from_detail_activity_background_color_tag" translatable="false">icon background color</string>
    <string name="information_menu_item">Info</string>
    <string name="settings_menu_item">Settings</string>
    <string name="fragment_tab_name_native_http">Native Http</string>
    <string name="fragment_tab_name_retrofit">Retrofit</string>
    <string name="fragment_tab_name_okhttp">Okhttp</string>
    <string name="fragment_tab_name_Volley">Volley</string>
    <string name="fragment_tab_name_native_json_parsing">Native Json Parsing</string>
    <string name="fragment_tab_name_gson_parsing">Gson</string>
    <string name="fragment_tab_name_linear_vertical_recyclerview">Vertical RecyclerView</string>
    <string name="fragment_tab_name_linear_horizontal_recyclerview">Horizontal RecyclerViews</string>
    <string name="fragment_tab_name_card_grid_recyclerview">Card Views</string>
    <string name="fragment_tab_name_grid_recyclerview">Grid Recyclerview</string>
    <string name="fragment_tab_name_picasso">Picasso</string>
    <string name="fragment_tab_name_sqlite">Native SQLite</string>
    <string name="fragment_tab_name_content_provider">Content Provider</string>
    <string name="fragment_tab_name_realm">Realm</string>
    <string name="fragment_tab_name_content_provider_bis">Content Provider II</string>
    <string name="fragment_tab_name_shared_preferences">Shared Preferences</string>
    <string name="fragment_tab_name_files">Files</string>
    <string name="fragment_tab_name_notifications">Notifications</string>
    <string name="fragment_tab_name_job_scheduling">Job Scheduling</string>
    <string name="fragment_tab_name_broadcast_receivers">Broadcast Receivers</string>
    <string name="fragment_tab_name_widgets">Widgets</string>
    <string name="fragment_info_linear_vertical_recyclerview">Fragment where you can see a list of items displayed vertically in a RecyclerView.</string>
    <string name="fragment_info_card_grid_recyclerview">Fragment where you can see a list of card items displayed vertically in a Grid RecyclerView.</string>
    <string name="fragment_info_grid_recyclerview">Fragment where you can see a list of items displayed vertically in a Grid RecyclerView.</string>
    <string name="fragment_info_linear_horizontal_recyclerview">Fragment where you can see various lists of card items displayed horizontally in several RecyclerViews.</string>
    <string name="fragment_info_native_http">Fragment where you can see a list of items downloaded through a native HTTP connection.</string>
    <string name="fragment_info_volley">Fragment where you can see a list of items downloaded through the Volley library.</string>
    <string name="fragment_info_okhttp">Fragment where you can see a list of items downloaded through the Okhttp library.</string>
    <string name="fragment_info_retrofit">Fragment where you can see a list of items downloaded through the Retrofit library and parsed with the GSON one.</string>
    <string name="fragment_info_sqlite">Fragment where you can perform all CRUD operations on the app’s contact database (the contact database is also accessed by the Content Provider fragment, so do not be surprised if you see the exact same data there).</string>
    <string name="content_provider_fragment_bis_begin_time_label">Begin time</string>
    <string name="content_provider_fragment_bis_end_time_label">End time</string>
    <string name="content_provider_fragment_bis_choose_calendar_label">Choose calendar</string>
    <string name="content_provider_fragment_bis_no_access_to_calendar_label">No access to calendar</string>
    <string name="content_provider_fragment_bis_event_label">Event</string>
    <string name="content_provider_fragment_bis_your_event_hint">Your event <xliff:g>&#8230;</xliff:g></string>
    <string name="content_provider_fragment_bis_event_description_label">Event description</string>
    <string name="content_provider_fragment_bis_event_description_hint">Your event description <xliff:g>&#8230;</xliff:g></string>
    <string name="content_provider_fragment_bis_go_to_last_event_label">Go to last added event</string>
    <string name="content_provider_fragment_bis_contact_name_label">Contact\'s name</string>
    <string name="content_provider_fragment_bis_contact_name_hint">Enter contact\'s name</string>
    <string name="content_provider_fragment_bis_contact_phone_label">Contact\'s phone number</string>
    <string name="content_provider_fragment_bis_contact_phone_hint">Enter contact \'s phone number <xliff:g>&#8230;</xliff:g></string>
    <string name="content_provider_fragment_bis_contact_email_label">Contact\'s email address</string>
    <string name="content_provider_fragment_bis_contact_email_hint">Enter contact\'s email address</string>
    <string name="content_provider_fragment_bis_add_contact_label">Add contact</string>
    <string name="content_provider_fragment_bis_go_to_last_contact_label">Go to last added contact</string>
    <string name="content_provider_fragment_bis_add_event_cardview_text">Add event</string>
    <string name="job_scheduling_fragment_job_scheduled_default_time" translatable="false">default_time_in_seconds_for_job_scheduling_fragment</string>
    <string name="shared_preferences_fragment_first_name_label">First name</string>
    <string name="shared_preferences_fragment_first_name_hint">Enter your first name <xliff:g> &#8230;</xliff:g></string>
    <string name="shared_preferences_fragment_family_name_label">Family name</string>
    <string name="shared_preferences_fragment_family_name_hint">Enter your family name <xliff:g>&#8230;</xliff:g></string>
    <string name="shared_preferences_fragment_age_label">Age</string>
    <string name="shared_preferences_fragment_age_hint">Enter your age <xliff:g>&#8230;</xliff:g></string>
    <string name="shared_preferences_fragment_languages_label">Preferred programming languages</string>
    <string name="shared_preferences_fragment_java_text" translatable="false">Java</string>
    <string name="shared_preferences_fragment_kotlin_text" translatable="false">Kotlin</string>
    <string name="shared_preferences_fragment_csharp_text" translatable="false">C#</string>
    <string name="shared_preferences_fragment_ruby_text" translatable="false">Ruby</string>
    <string name="shared_preferences_fragment_python_text" translatable="false">Python</string>
    <string name="shared_preferences_fragment_others_text">Others</string>
    <string name="shared_preferences_fragment_cardview_text">Close activity</string>
    <string name="notifications_fragment_notification_title_label">Notification\'s title</string>
    <string name="notifications_fragment_notification_content_label">Notification\'s content</string>
    <string name="notifications_fragment_notification_choose_icon_label">Choose notification\'s icon</string>
    <string name="notifications_fragment_start_notification">Launch notification</string>
    <string name="settings_checkbox_summary_off">No</string>
    <string name="settings_checkbox_summary_on">Yes</string>
    <string name="settings_checkbox_summary_title">Sort movies from Network by vote average</string>
    <string name="settings_list_title">Year to filter movies from Network</string>
    <string name="settings_edittext_title">Default time, in seconds, for the Job Scheduling fragment</string>
    <string name="settings_sort_by_vote_average_sharedpref" translatable="false">sort_by_vote_average</string>
    <string name="settings_year_for_filtering_network_request_sharedpref" translatable="false">year_for_filtering_network_request</string>
    <string name="networking_year_2016_for_http_request" translatable="false">2016</string>
</resources>