<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/notification_fragment_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/notifications_fragment_layout_margin">

        <TextView
            style="@style/TextLabelStyle"
            android:text="@string/notifications_fragment_notification_title_label" />

        <EditText
            android:id="@+id/notification_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/TextLabelStyle"
            android:text="@string/notifications_fragment_notification_content_label" />

        <EditText
            android:id="@+id/notification_content_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            style="@style/TextLabelStyle"
            android:layout_marginTop="@dimen/notifications_fragment_choose_icon_label_margin_top"
            android:text="@string/notifications_fragment_notification_choose_icon_label" />

        <ImageView
            android:id="@+id/notification_selected_picture_image_view"
            android:layout_width="@dimen/notifications_fragment_imageview_size"
            android:layout_height="@dimen/notifications_fragment_imageview_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/notifications_fragment_imageview_margin_top"
            android:background="@drawable/background_drawable" />

        <android.support.v7.widget.CardView
            android:id="@+id/show_notification_cardview_button"
            style="@style/CardViewButtonStyle"
            android:layout_marginTop="@dimen/notifications_fragment_cardview_margin_top"
            android:elevation="@dimen/notifications_fragment_cardview_elevation"
            app:cardCornerRadius="@dimen/notifications_fragment_cardview_corner_radius">

            <TextView
                style="@style/CardViewButtonTextStyle"
                android:text="@string/notifications_fragment_start_notification" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>